feat: Add get series & instances endpoints
- Create getSeries & getInstances method in dicom-web module
- Add more tags in dicom-web module
- Create get series & instances endpoint
- Update swagger.yaml
