# src/studies/controllers/manage.js
@@ -1,10 +1,10 @@
-import { queryStudies } from '#lib/dicom-web/qido-rs.js';
+import { getInstances, getSeries, queryStudies } from '#lib/dicom-web/qido-rs.js';
 
 /**
  * @param {import('koa').Context} ctx
  * @returns {Promise<void>}
  */
-export default async (ctx) => {
+export const getStudiesController = async (ctx) => {
 	const query = {
 		patientId: ctx.query['patientId'],
 		patientName: ctx.query['patientName'],
@@ -14,10 +14,35 @@ export default async (ctx) => {
 		identifier: ctx.query['identifier'],
 	};
 
-	console.log('query', query);
-
 	try {
 		const items = await queryStudies(query);
+		ctx.status = 200;
+		ctx.body = { ok: true, items };
+	} catch (e) {
+		ctx.status = 500;
+		ctx.body = { ok: false, message: e.message };
+	}
+};
+
+export const getSeriesController = async (ctx) => {
+	const studyUid = ctx.params['studyUid'];
+
+	try {
+		const items = await getSeries(studyUid);
+		ctx.status = 200;
+		ctx.body = { ok: true, items };
+	} catch (e) {
+		ctx.status = 500;
+		ctx.body = { ok: false, message: e.message };
+	}
+};
+
+export const getInstancesController = async (ctx) => {
+	const studyUid = ctx.params['studyUid'];
+	const seriesUid = ctx.params['seriesUid'];
+
+	try {
+		const items = await getInstances(studyUid, seriesUid);
 		ctx.status = 200;
 		ctx.body = { ok: true, items };
 	} catch (e) {
